syntax = "proto3";


import "google/protobuf/timestamp.proto";

option go_package = "github.com/vedantkulkarni/mqchat/proto";




message User{
    int64 id = 1;
    string username = 2;
    string email = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp last_seen = 5;
};

message CreateUserRequest{
    string username = 1;
    string email = 2;
}
message CreateUserResponse{
    User user = 1;
}

message UpdateUserRequest{
    int64 id = 1;
    string username = 2;
    string email = 3;
}
message UpdateUserResponse{
    User user = 1;
}

message DeleteUserRequest{
    int64 id = 1;
}
message DeleteUserResponse{
    bool message = 1;
}

message GetUserRequest{
    int64 id = 1;
}
message GetUserResponse{
    User user = 1;
}

message GetUsersRequest{
    int64 id = 1;
}
message GetUsersResponse{
    repeated User users = 1;
}

service UserGRPCService{
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse){}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse){}
    rpc GetUser(GetUserRequest) returns (GetUserResponse){}
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse){}
};